Refactor `CustomerController` to use `final` for dependency injection, simplify exception handling in `GlobalExceptionHandler`, and clean up unused imports in `CustomerService`